# SeqSeek_Classify_Full_Pipeline

./: .gitignore  ABSTRACT.md  Makefile  README.md  dvc.yaml  pyproject.toml  requirements.txt
src/R/: label_transfer.R  results_to_seurat.R
src/py/: download.py  helper_functions.py  merge_results.py  neural_network.py
