[tool.poetry]
name = "SeqSeek_Pipeline"
version = "0.0.1"
description = "Run the full SeqSeek Pipeline"
authors = ["rbpatt2019 <rb.patterson.cross@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dvc = "^1.6.6"

[tool.poetry.dev-dependencies]
pytest = "^5"
isort = "^5"
pylint = "^2"
mypy = "^0"
ipython = "^7"
pre-commit = "^2"
black = "^20.8b1"

[tool.pytest.ini_options]
addopts = """
-vv
--ignore=docs
--diff-type=split
--doctest-modules
--cov=dash_covid19/
--cov-report term"""

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true

[tool.pylint.messages_control]
disable = "C"

[tool.pylint.similarities]
min-similarity-lines = 10
ignore-comments = true
ignore-docstrings = true
ignore-imports = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
